fixed header covering body text

--- a/sidebar/sidebar.css
+++ b/sidebar/sidebar.css
@@ -147,7 +147,8 @@ a {
 }
 
 .height-100 {
-    height: 100vh
+	margin-top: var(--header-height);
+    height: 100vh;
 }
 
 @media screen and (min-width: 768px) {
@@ -160,6 +161,10 @@ a {
         height: calc(var(--header-height) + 1rem);
         padding: 0 2rem 0 calc(var(--nav-width) + 2rem)
     }
+
+	.height-100 {
+		margin-top: calc(var(--header-height) + 1rem);
+	}
 
     .header_img {
         width: 40px;
